Adds supports for popular tags
